<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.DetailActivity">


            <TextView
                android:id="@+id/following"
                android:layout_width="146dp"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/following"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@+id/tvItemName2"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName2" />

            <TextView
                android:id="@+id/follower"
                android:layout_width="146dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/followers"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tvItemName2"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName2" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="179dp"
                android:layout_height="151dp"
                android:contentDescription="@string/foto_user"
                app:layout_constraintBottom_toTopOf="@+id/progressBar2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvItemName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/img_item_photo"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_item_photo"
                app:layout_constraintVertical_bias="0.452"
                tools:text="Pepri Andika Ganteng" />

            <TextView
                android:id="@+id/login"
                android:layout_width="146dp"
                android:layout_height="0dp"
                android:text="@string/userlogin"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/following"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvItemName2" />


            <LinearLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="447dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/following">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorBackgroundFloating"
                    android:contentDescription="@string/aa"
                    android:textAlignment="center"
                    app:tabTextColor="@android:color/black" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>